<resources>
    <string name="app_name">ReciApp</string>
    <string name="title_welcome">Bienvenido!</string>
    <string name="title_enter_app">Ingrese a ReciApp</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="general_processing">Procesando solicitud…</string>
    <string name="error_login_failure">Ha ocurrido un error, vuelve a intentarlo.</string>
    <string name="title_activity_recycle">RecycleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_points">Puntos</string>
    <string name="general_empty" />
    <string name="menu_virtual_store">Tienda Virtual</string>
    <string name="menu_scan_points">Escanear Puntos</string>
    <string name="menu_sign_out">Cerrar Sesión</string>
    <string name="general_pickup_date">PRÓXIMA FECHA DE RECOGIDA</string>
    <string name="general_pickup_time">HORA DE RECOGIDA</string>
    <string name="general_select_your_recycling">Seleccione su reciclaje</string>
    <string name="btn_request_pickup">Solicitar Recogida</string>
    <string name="general_paperboard">Cartón</string>
    <string name="general_plastic">Plástico</string>
    <string name="general_glass">Vidrio</string>
    <string name="general_technology">Tenología</string>
    <string name="general_metal">Metal</string>
    <string name="general_empty_points">---</string>
    <string name="error_open_shifts_failure">No hemos podido cargar la información correctamente.</string>
    <string name="title_pickup_congratulations">Felicitaciones, solicitud de recogida exitosa!!</string>
    <string name="btn_end">Terminar</string>
    <string name="general_picker_day">UN RECOLECTOR PASARÁ EL DÍA</string>
    <string name="error_shift_failure">No hemos podido crear tu solicitud, vuelve a intentarlo</string>
    <string name="general_thanks_for_your_request">Gracias por tu solicitud</string>
</resources>
