<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/nav_header_main" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvPoints"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_16dp"
                android:layout_marginEnd="@dimen/size_16dp"
                app:cardCornerRadius="@dimen/size_4dp"
                app:cardElevation="@dimen/elevation_4dp"
                app:layout_constraintBottom_toTopOf="@id/nsvContentMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cnlNavHeader">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txvPoints"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/title_points"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.core.widget.ContentLoadingProgressBar
                        android:id="@+id/clpNavLoader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/progressBarStyleLarge"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txvPoints"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txvPointsValue"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_32sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txvPoints"
                        tools:text="450" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsvContentMenu"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="@dimen/size_0dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cnlNavHeader">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/size_48dp">

                    <com.reciapp.user.presentation.views.customViews.ItemMenu
                        android:id="@+id/ItmStore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:menu_image="@drawable/ic_menu_store"
                        app:menu_text="@string/menu_virtual_store" />

                    <com.reciapp.user.presentation.views.customViews.ItemMenu
                        android:id="@+id/ItmScan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ItmStore"
                        app:menu_image="@drawable/ic_menu_scan"
                        app:menu_text="@string/menu_scan_points" />

                    <com.reciapp.user.presentation.views.customViews.ItemMenu
                        android:id="@+id/ItmSignOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ItmScan"
                        app:menu_image="@drawable/ic_menu_sign_out"
                        app:menu_text="@string/menu_sign_out" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_recycling_arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
